<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewMenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Menu"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/winkle"
        android:id="@+id/Menu"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="30sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Menu"
        android:background="@android:color/transparent"
        android:scrollbars="vertical" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="650dp">

        <Button
            android:id="@+id/btn_GoToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155dp"
            android:background="@drawable/btn_maroon_selector"
            android:text="View Cart"
            android:textSize="10dp" />
    </RelativeLayout>

</RelativeLayout>